// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WarningsViews WarningsView displays nothing if no notifications 1`] = `<div />`;

exports[`WarningsViews WarningsView does displays a warning 1`] = `
<div>
  <div
    class="sc-dJjYzT fGoGkn"
  >
    <div
      class="sc-hGPBjI yIbML"
    >
      <div
        class="sc-dlVxhl dhJkjd"
      >
        <div
          class="sc-iwjdpV kxtdcs"
        >
          WARNING xx0
        </div>
        <h4
          class="sc-bYoBSM"
        >
          My xx1 warning
        </h4>
      </div>
      <div
        class="sc-kfPuZi"
      >
        <div
          class="sc-dlVxhl dhJkjd"
        >
          This is xx2 warning
        </div>
        <div
          class="sc-kfPuZi"
        >
          <pre
            class="sc-jJoQJp fAKJvF"
          >
            EXPLAIN MATCH xx3
            <br
              class="sc-ikJyIC"
            />
                   
            ^
          </pre>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`WarningsViews WarningsView does displays multiple warnings 1`] = `
<div>
  <div
    class="sc-dJjYzT fGoGkn"
  >
    <div
      class="sc-hGPBjI yIbML"
    >
      <div
        class="sc-dlVxhl dhJkjd"
      >
        <div
          class="sc-iwjdpV kxtdcs"
        >
          WARNING xx0
        </div>
        <h4
          class="sc-bYoBSM"
        >
          My xx1 warning
        </h4>
      </div>
      <div
        class="sc-kfPuZi"
      >
        <div
          class="sc-dlVxhl dhJkjd"
        >
          This is xx2 warning
        </div>
        <div
          class="sc-kfPuZi"
        >
          <pre
            class="sc-jJoQJp fAKJvF"
          >
            EXPLAIN MATCH zz3
            <br
              class="sc-ikJyIC"
            />
                   
            ^
          </pre>
        </div>
      </div>
    </div>
    <div
      class="sc-hGPBjI yIbML"
    >
      <div
        class="sc-dlVxhl dhJkjd"
      >
        <div
          class="sc-iwjdpV kxtdcs"
        >
          WARNING yy0
        </div>
        <h4
          class="sc-bYoBSM"
        >
          My yy1 warning
        </h4>
      </div>
      <div
        class="sc-kfPuZi"
      >
        <div
          class="sc-dlVxhl dhJkjd"
        >
          This is yy2 warning
        </div>
        <div
          class="sc-kfPuZi"
        >
          <pre
            class="sc-jJoQJp fAKJvF"
          >
            EXPLAIN MATCH zz3
            <br
              class="sc-ikJyIC"
            />
               
            ^
          </pre>
        </div>
      </div>
    </div>
  </div>
</div>
`;
